# ualigner

./: README.md  aliases  okteto.yml  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: routine-tests.yml
tests/: test_ualigner.py
ualigner/: __init__.py  testrun.py  ualigner.py
