[tool.poetry]
name = "ualigner"
version = "0.1.0"
description = "pack_name descr "
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/ualigner"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.7.3,<4.0"
logzero = "^1.7.0"
icecream = "^2.1.1"
install = "^1.3.5"
alive-progress = "^2.3.1"
model-pool = {git = "https://github.com/ffreemt/align-model-pool.git"}

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test"
test = "pytest tests"
build = "poetry build"
_publish = "poetry publish"
release = ["test", "build", "_publish"]
lint = { cmd = "pylint ualigner" }
format = "black tests ualigner"
docstyle = "pydocstyle --convention=google tests ualigner"
tunnel = {cmd ="ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
