[tool.poetry]
name = "ualigner"
version = "0.1.0"
description = "pack_name descr "
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/ualigner"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
icecream = "^2.1.1"
install = "^1.3.5"
alive-progress = "^2.3.1"

torch = [
  # {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'"}
]
# numpy = "^1.21.4"

seg-text = "^0.1.0"
model-pool = "^0.1.0"

[tool.poe.executor]
type = "poetry"

[tool.poe.tasks]
memo = "echo poe test"
test = "pytest tests"
build = "poetry build"
_publish = "poetry publish"
release = ["test", "build", "_publish"]
lint = { cmd = "pylint ualigner" }
format = "black tests ualigner"
docstyle = "pydocstyle --convention=google tests ualigner"
tunnel = {cmd ="ssh -CN ip_or_hostname_defined_in_hosts -L 9091:127.0.0.1:9091"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
# tbump = "^6.3.2"
poethepoet = "^0.10.0"
ipython = "^8.0.1"
rich = "^11.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
